# AvitoMCP

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
scripts/: smoke_remote.py
src/avito_mcp/: __init__.py  __main__.py  config.py  history.py  oauth.py  search.py  security.py  server.py
tests/: test_history.py  test_search.py  test_security.py  test_server.py
tests/fixtures/: avito_search.html
