[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "avito-mcp"
version = "0.1.0"
description = "A privacy-minimal remote MCP server for monitoring Avito searches."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "beautifulsoup4==4.15.0",
  "httpx==0.28.1",
  "mcp==1.28.1",
  "uvicorn[standard]==0.51.0",
]

[project.optional-dependencies]
dev = [
  "pytest==9.1.1",
  "pytest-asyncio==1.4.0",
  "ruff==0.15.22",
]

[project.scripts]
avito-mcp = "avito_mcp.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/avito_mcp"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
  "ignore:Using `httpx` with `starlette.testclient` is deprecated:starlette.exceptions.StarletteDeprecationWarning",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ASYNC"]
